#[build-system]
#requires = ["setuptools >= 61.0"]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "change-point-detection"
version = "2025.0.0"
authors = [
    {name = "Zhymir Thompson"}
]
requires-python = ">= 3.10"
readme = "README.md"

dependencies = [
    "kaleido", # need it for saving plots from plotly
    "matplotlib", # plotting library
    "more_itertools",
    "numba", # this should be optional ideally, but idk how to include optionally
    "numpy",
    "pandas", # table representation
    "plotly", # plotting library
    "scikit-learn",
    "scipy",
    "ruptures", # offline change point detection
    "tomlkit",
    "tqdm" # this will be optional eventually
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-benchmark"
]
profiling = [
    "line_profiler",
    "snakeviz",
    "jinja2"
]
#progress = [
#    "tqdm"
#]
cython = [
    "cython"
]